--- a/laravel/public/css/style.css
+++ b/laravel/public/css/style.css
@@ -6,6 +6,10 @@ html, body, p, h1, h2, h3, h4, h5, nav, .row, section, .container {
     margin: 0px;
 }
 
+.hidden{
+	display: block;
+}
+
 .container_tab
 {
 	background-color: #f8f9f9;
@@ -126,7 +130,7 @@ section .main_image
 	background-image: url("../images/front_img.jpg");
 	background-size: 100%;
 	background-repeat: no-repeat;
-	background-color: #f9f9f9;
+
 
 }
 section div .dream_house
@@ -209,8 +213,20 @@ div .thumbnail .caption a
 
 	.contents_back
 {
-	height: 520px;
+		background-color: #f9f9f9;
+		height: 350px;
+		position: relative;
+
 }
+	.contents_top
+	{
+		max-width: 1024px;
+		min-width: 340px;
+		margin: 0 auto;
+		position: relative;
+		top:-80px;
+		z-index: 300;
+	}
 .us
 {
 	display: table;
@@ -789,6 +805,7 @@ div .thumbnail .caption a
 {
 	font-size: 21px;
 	font-weight: 600;
+	text-transform: capitalize;
 }
 .main_title .row button
 {
@@ -807,7 +824,8 @@ div .thumbnail .caption a
 {
 	padding: 5px 0;
 	border-bottom: 1px solid #e9e9e9;
-	color: #333; 
+	color: #333;
+	text-transform: capitalize;
 
 }
 .sub_title .row
@@ -1085,7 +1103,17 @@ div .thumbnail .caption a
 	color: #fab702;
 
   }
-
+.menu_section
+{
+	max-width: 1024px;
+	min-width: 340px;
+	margin: 0 auto;
+	padding: 0px 0 60px 0;
+}
+.menu_section h1
+{
+	padding: 40px 15px;
+}
 
 @media only screen and (min-width: 768px) {
 	.dream_contents
@@ -1115,7 +1143,7 @@ div .thumbnail .caption a
 	}
 	section .dream_contents .contents
 	{
-		padding-bottom: 30px;
+		padding-bottom: 30px
 	}
 
 
@@ -1128,10 +1156,10 @@ div .thumbnail .caption a
 	}
 
 	.contents_back
-
 	{
-		display: none;
+		height: auto;
 	}
+
 	 .tab_top
 	 {
 	 	display: none;
@@ -1173,7 +1201,7 @@ div .thumbnail .caption a
 
 	section .main_image
 	{
-		background-size: 530px;
+		height: 300px;
 		background-color: rgba(123, 113, 113, 0);
 	}
 	section div .dream_house
